# sertaodev-flask

./: .gitignore  README.md  app.py  dep.txt  models.py  pyproject.toml  serializer.py  views.py
migrations/versions/: 0b8890ce5d03_.py
