[tool.poetry]
name = "sertaodev-flask"
version = "0.1.0"
description = "Crud with flask"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
flask-marshmallow = "^0.14.0"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^2.7.0"
marshmallow-sqlalchemy = "^0.24.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
